samples/_failures_safe/1761645309_9ddf53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67f61c80.c: In function ‘main’:
./samples/SAFE/__tmp_67f61c80.c:132:16: error: missing terminating " character
  132 |         printf("\nOriginal matrix:\n
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_67f61c80.c:132:9: error: expected expression at end of input
  132 |         printf("\nOriginal matrix:\n
      |         ^~~~~~
./samples/SAFE/__tmp_67f61c80.c:132:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_67f61c80.c:132:9: error: expected declaration or statement at end of input
